--- a/apps/server_web/.gitignore
+++ b/apps/server_web/.gitignore
@@ -26,7 +26,7 @@ erl_crash.dump
 server_web-*.tar
 
 # Ignore assets that are produced by build tools.
-/priv/static/assets/
+/priv/static/assets/*.styles
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
@@ -34,4 +34,3 @@ server_web-*.tar
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
-
